--- a/package.json
+++ b/package.json
@@ -9,14 +9,17 @@
     "start": "node __sapper__/build",
     "cy:run": "cypress run",
     "cy:open": "cypress open",
-    "test": "run-p --race dev cy:run"
+    "test": "run-p --race dev cy:run",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "@polka/send": "^0.4.0",
     "@sveltejs/site-kit": "^1.1.4",
     "compression": "^1.7.1",
     "marked": "^0.8.0",
+    "patch-package": "^6.2.2",
     "polka": "next",
+    "postinstall-postinstall": "^2.1.0",
     "prismjs": "^1.19.0",
     "sirv": "^0.4.0"
   },
