--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "rollup": "^1.20.0",
     "rollup-plugin-babel": "^4.3.3",
     "rollup-plugin-svelte": "^5.1.1",
-    "rollup-plugin-terser": "^5.2.0",
+    "rollup-plugin-terser": "5.3.1",
     "sapper": "^0.27.11",
     "svelte": "^3.0.0"
   }
